cmake_minimum_required(VERSION 3.26)
project(smart_car_dev C)

set(CMAKE_C_STANDARD 11)

include_directories("balance car/libraries/sdk/Core")
include_directories("balance car/libraries/sdk/Peripheral")
include_directories("balance car/libraries/zf_common")
include_directories("balance car/libraries/zf_device")
include_directories("balance car/libraries/zf_driver")
include_directories("balance car/project/code")
include_directories("balance car/project/user/inc")

add_executable(smart_car_dev
        "balance car/libraries/sdk/Core/core_riscv.c"
        "balance car/libraries/sdk/Core/core_riscv.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_adc.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_adc.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_bkp.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_bkp.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_can.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_can.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_crc.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_crc.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dac.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dac.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dbgmcu.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dbgmcu.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dma.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dma.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dvp.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_dvp.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_eth.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_eth.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_exti.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_exti.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_flash.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_flash.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_fsmc.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_fsmc.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_gpio.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_gpio.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_i2c.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_i2c.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_iwdg.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_iwdg.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_opa.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_opa.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_pwr.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_pwr.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_rcc.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_rcc.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_rng.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_rng.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_rtc.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_rtc.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_sdio.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_sdio.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_spi.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_spi.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_tim.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_tim.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_usart.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_usart.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_usbotg_device.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_usbotg_device.h"
        "balance car/libraries/sdk/Peripheral/ch32v30x_wwdg.c"
        "balance car/libraries/sdk/Peripheral/ch32v30x_wwdg.h"
        "balance car/libraries/zf_common/zf_common_clock.c"
        "balance car/libraries/zf_common/zf_common_clock.h"
        "balance car/libraries/zf_common/zf_common_debug.c"
        "balance car/libraries/zf_common/zf_common_debug.h"
        "balance car/libraries/zf_common/zf_common_fifo.c"
        "balance car/libraries/zf_common/zf_common_fifo.h"
        "balance car/libraries/zf_common/zf_common_font.c"
        "balance car/libraries/zf_common/zf_common_font.h"
        "balance car/libraries/zf_common/zf_common_function.c"
        "balance car/libraries/zf_common/zf_common_function.h"
        "balance car/libraries/zf_common/zf_common_headfile.h"
        "balance car/libraries/zf_common/zf_common_interrupt.c"
        "balance car/libraries/zf_common/zf_common_interrupt.h"
        "balance car/libraries/zf_common/zf_common_typedef.h"
        "balance car/libraries/zf_device/zf_device_absolute_encoder.c"
        "balance car/libraries/zf_device/zf_device_absolute_encoder.h"
        "balance car/libraries/zf_device/zf_device_aht20.c"
        "balance car/libraries/zf_device/zf_device_aht20.h"
        "balance car/libraries/zf_device/zf_device_bluetooth_ch9141.c"
        "balance car/libraries/zf_device/zf_device_bluetooth_ch9141.h"
        "balance car/libraries/zf_device/zf_device_camera.c"
        "balance car/libraries/zf_device/zf_device_camera.h"
        "balance car/libraries/zf_device/zf_device_config.h"
        "balance car/libraries/zf_device/zf_device_detector.c"
        "balance car/libraries/zf_device/zf_device_detector.h"
        "balance car/libraries/zf_device/zf_device_dl1a.c"
        "balance car/libraries/zf_device/zf_device_dl1a.h"
        "balance car/libraries/zf_device/zf_device_dl1b.c"
        "balance car/libraries/zf_device/zf_device_dl1b.h"
        "balance car/libraries/zf_device/zf_device_dm1xa.c"
        "balance car/libraries/zf_device/zf_device_dm1xa.h"
        "balance car/libraries/zf_device/zf_device_gps_tau1201.c"
        "balance car/libraries/zf_device/zf_device_gps_tau1201.h"
        "balance car/libraries/zf_device/zf_device_icm20602.c"
        "balance car/libraries/zf_device/zf_device_icm20602.h"
        "balance car/libraries/zf_device/zf_device_imu660ra.c"
        "balance car/libraries/zf_device/zf_device_imu660ra.h"
        "balance car/libraries/zf_device/zf_device_imu963ra.c"
        "balance car/libraries/zf_device/zf_device_imu963ra.h"
        "balance car/libraries/zf_device/zf_device_ips114.c"
        "balance car/libraries/zf_device/zf_device_ips114.h"
        "balance car/libraries/zf_device/zf_device_ips200.c"
        "balance car/libraries/zf_device/zf_device_ips200.h"
        "balance car/libraries/zf_device/zf_device_k24c02.c"
        "balance car/libraries/zf_device/zf_device_k24c02.h"
        "balance car/libraries/zf_device/zf_device_key.c"
        "balance car/libraries/zf_device/zf_device_key.h"
        "balance car/libraries/zf_device/zf_device_mpu6050.c"
        "balance car/libraries/zf_device/zf_device_mpu6050.h"
        "balance car/libraries/zf_device/zf_device_mt9v03x_dvp.c"
        "balance car/libraries/zf_device/zf_device_mt9v03x_dvp.h"
        "balance car/libraries/zf_device/zf_device_oled.c"
        "balance car/libraries/zf_device/zf_device_oled.h"
        "balance car/libraries/zf_device/zf_device_scc8660_dvp.c"
        "balance car/libraries/zf_device/zf_device_scc8660_dvp.h"
        "balance car/libraries/zf_device/zf_device_tft180.c"
        "balance car/libraries/zf_device/zf_device_tft180.h"
        "balance car/libraries/zf_device/zf_device_type.c"
        "balance car/libraries/zf_device/zf_device_type.h"
        "balance car/libraries/zf_device/zf_device_virtual_oscilloscope.c"
        "balance car/libraries/zf_device/zf_device_virtual_oscilloscope.h"
        "balance car/libraries/zf_device/zf_device_w25q32.c"
        "balance car/libraries/zf_device/zf_device_w25q32.h"
        "balance car/libraries/zf_device/zf_device_wifi_spi.c"
        "balance car/libraries/zf_device/zf_device_wifi_spi.h"
        "balance car/libraries/zf_device/zf_device_wifi_uart.c"
        "balance car/libraries/zf_device/zf_device_wifi_uart.h"
        "balance car/libraries/zf_device/zf_device_wireless_ch573.c"
        "balance car/libraries/zf_device/zf_device_wireless_ch573.h"
        "balance car/libraries/zf_device/zf_device_wireless_uart.c"
        "balance car/libraries/zf_device/zf_device_wireless_uart.h"
        "balance car/libraries/zf_driver/zf_driver_adc.c"
        "balance car/libraries/zf_driver/zf_driver_adc.h"
        "balance car/libraries/zf_driver/zf_driver_delay.c"
        "balance car/libraries/zf_driver/zf_driver_delay.h"
        "balance car/libraries/zf_driver/zf_driver_dvp.c"
        "balance car/libraries/zf_driver/zf_driver_dvp.h"
        "balance car/libraries/zf_driver/zf_driver_encoder.c"
        "balance car/libraries/zf_driver/zf_driver_encoder.h"
        "balance car/libraries/zf_driver/zf_driver_exti.c"
        "balance car/libraries/zf_driver/zf_driver_exti.h"
        "balance car/libraries/zf_driver/zf_driver_flash.c"
        "balance car/libraries/zf_driver/zf_driver_flash.h"
        "balance car/libraries/zf_driver/zf_driver_gpio.c"
        "balance car/libraries/zf_driver/zf_driver_gpio.h"
        "balance car/libraries/zf_driver/zf_driver_iic.c"
        "balance car/libraries/zf_driver/zf_driver_iic.h"
        "balance car/libraries/zf_driver/zf_driver_pit.c"
        "balance car/libraries/zf_driver/zf_driver_pit.h"
        "balance car/libraries/zf_driver/zf_driver_pwm.c"
        "balance car/libraries/zf_driver/zf_driver_pwm.h"
        "balance car/libraries/zf_driver/zf_driver_soft_iic.c"
        "balance car/libraries/zf_driver/zf_driver_soft_iic.h"
        "balance car/libraries/zf_driver/zf_driver_soft_spi.c"
        "balance car/libraries/zf_driver/zf_driver_soft_spi.h"
        "balance car/libraries/zf_driver/zf_driver_spi.c"
        "balance car/libraries/zf_driver/zf_driver_spi.h"
        "balance car/libraries/zf_driver/zf_driver_timer.c"
        "balance car/libraries/zf_driver/zf_driver_timer.h"
        "balance car/libraries/zf_driver/zf_driver_uart.c"
        "balance car/libraries/zf_driver/zf_driver_uart.h"
        "balance car/libraries/zf_driver/zf_driver_usb_cdc.c"
        "balance car/libraries/zf_driver/zf_driver_usb_cdc.h"
        "balance car/project/code/cam_preprocess.c"
        "balance car/project/code/cam_preprocess.h"
        "balance car/project/code/motor.c"
        "balance car/project/code/motor.h"
        "balance car/project/code/My_Math.c"
        "balance car/project/code/My_Math.h"
        "balance car/project/code/Ourcode_headfile.h"
        "balance car/project/code/pid.c"
        "balance car/project/code/pid.h"
        "balance car/project/code/SeekLine4.0.c"
        "balance car/project/code/SeekLine4.0.h"
        "balance car/project/code/Servo.c"
        "balance car/project/code/Servo.h"
        "balance car/project/user/inc/isr.h"
        "balance car/project/user/src/isr.c"
        "balance car/project/user/src/main.c")
